--- a/views/main/index.html
+++ b/views/main/index.html
@@ -292,7 +292,7 @@
     </div>
     <div class="school_news">
         <div class="school_news_title clearfix">
-            <a href="">留学攻略</a>
+            <a href="/article" target="_blank">留学攻略</a>
             <p>|</p>
             <a href="">留学咨询</a>
         </div>
