--- a/views/admin/abroad/abroad_nav_content_add.html
+++ b/views/admin/abroad/abroad_nav_content_add.html
@@ -31,6 +31,8 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_content_url" placeholder="请输入文章跳转链接,系统会自动在链接后加.html，所以这里填文章页面的英文、数字名称" name="abroad_content_url">
         <label for="abroad_content_order">文章标题顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_content_order" placeholder="请输入文章标题顺序，小数字排前面，默认10" name="abroad_content_order">
+        <label for="abroad_content_markdown">文章内容：</label>
+        <textarea class="form-control" style="margin-top: 10px;resize: none" name="abroad_content_markdown" id="abroad_content_markdown" cols="30" rows="10" placeholder="输入文章所有内容,用markdown语法"></textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
