--- a/views/admin/abroad/abroad_nav_content_edit.html
+++ b/views/admin/abroad/abroad_nav_content_edit.html
@@ -42,6 +42,8 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_content_url" value="{{abroad_content.Abroad_content_url}}" name="abroad_content_url">
         <label for="abroad_content_order">文章标题顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="abroad_content_order" value="{{abroad_content.Abroad_content_order}}" name="abroad_content_order">
+        <label for="abroad_content_markdown">文章内容：</label>
+        <textarea class="form-control" style="margin-top: 10px;resize: none" name="abroad_content_markdown" id="abroad_content_markdown" cols="30" rows="10">{{abroad_content.Abroad_content_markdown}}</textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
