--- a/views/admin/training/training_content_add.html
+++ b/views/admin/training/training_content_add.html
@@ -37,6 +37,8 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="training_content_url" placeholder="请输入培训文章跳转的链接，默认为'/'" name="training_content_url">
         <label for="training_content_order">培训文章顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="training_content_order" placeholder="请输入培训文章顺序，小数字排前面，默认10" name="training_content_order">
+        <label for="training_content_markdown">文章内容：</label>
+        <textarea class="form-control" style="margin-top: 10px;resize: none" name="training_content_markdown" id="training_content_markdown" cols="30" rows="10" placeholder="输入文章所有内容,用markdown语法"></textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
