--- a/views/admin/training/training_content_edit.html
+++ b/views/admin/training/training_content_edit.html
@@ -42,6 +42,8 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="training_content_url" value="{{training_content.Training_content_url}}" name="training_content_url">
         <label for="training_content_order">培训文章顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="training_content_order" value="{{training_content.Training_content_order}}" name="training_content_order">
+        <label for="training_content_markdown">文章内容：</label>
+        <textarea class="form-control" style="margin-top: 10px;resize: none" name="training_content_markdown" id="training_content_markdown" cols="30" rows="10">{{training_content.Training_content_markdown}}</textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
