--- a/views/main/article_list_layout.html
+++ b/views/main/article_list_layout.html
@@ -139,26 +139,28 @@
 <!--文章开始-->
 <section class="article clearfix">
     <div class="article_bar">
-        <div class="article_input_list">
+        <div class="article_input_list" id="article_list">
             <h3>文章列表筛选（共有111篇）</h3>
             <div class="article_input clearfix">
                 <p>推荐：</p>
-                <a href="">不限</a>
-                <a href="">最新上传</a>
-                <a href="">热度排行</a>
+                <a href="/Abroad_article?article_rank=&article_type={{article_type}}&article_abroad={{article_abroad}}&call1=&call2={{call2}}&call3={{call3}}" class="{% if call1 == 0 %}active{%else%}{%endif%}">不限</a>
+                <a href="/Abroad_article?article_rank=1&article_type={{article_type}}&article_abroad={{article_abroad}}&call1=1&call2={{call2}}&call3={{call3}}" class="{% if call1 == 1 %}active{%else%}{%endif%}">最新上传</a>
+                <a href="/Abroad_article?article_rank=2&article_type={{article_type}}&article_abroad={{article_abroad}}&call1=2&call2={{call2}}&call3={{call3}}" class="{% if call1 == 2 %}active{%else%}{%endif%}">热度排行</a>
             </div>
             <div class="article_input clearfix">
                 <p>文章类型：</p>
-                <a href="">不限</a>
-                <a href="">留学攻略</a>
-                <a href="">留学咨询</a>
+                <a href="/Abroad_article?article_rank=&article_type=&article_abroad={{article_abroad}}&call1={{call1}}&call2=&call3={{call3}}" class="{% if call2 == 0 %}active{%else%}{%endif%}">不限</a>
+                <a href="/Abroad_article?article_rank={{article_rank}}&article_type=留学规划&article_abroad={{article_abroad}}&call1={{call1}}&call2=1&call3={{call3}}" class="{% if call2 == 1 %}active{%else%}{%endif%}">留学规划</a>
+                <a href="/Abroad_article?article_rank={{article_rank}}&article_type=专业推荐info&article_abroad={{article_abroad}}&call1={{call1}}&call2=2&call3={{call3}}" class="{% if call2 == 2 %}active{%else%}{%endif%}">专业推荐</a>
+                <a href="/Abroad_article?article_rank={{article_rank}}&article_type=院校申请info&article_abroad={{article_abroad}}&call1={{call1}}&call2=3&call3={{call3}}" class="{% if call2 == 3 %}active{%else%}{%endif%}">院校申请</a>
+                <a href="/Abroad_article?article_rank={{article_rank}}&article_type=签证指南info&article_abroad={{article_abroad}}&call1={{call1}}&call2=4&call3={{call3}}" class="{% if call2 == 4 %}active{%else%}{%endif%}">签证指南</a>
             </div>
             <div class="article_input clearfix">
                 <p>学历：</p>
-                <a href="">不限</a>
-                <a href="">本科</a>
-                <a href="">研究生</a>
-                <a href="">中学 </a>
+                <a href="/Abroad_article?article_rank=&article_type=&article_abroad={{article_abroad}}&call1={{call1}}&call2={{call2}}&call3=" class="{% if call3 == 0 %}active{%else%}{%endif%}">不限</a>
+                <a href="/Abroad_article?article_rank={{article_rank}}&article_type={{article_type}}&article_abroad=英国本科留学&call1={{call1}}&call2={{call2}}&call3=1" class="{% if call3 == 1 %}active{%else%}{%endif%}">本科</a>
+                <a href="/Abroad_article?article_rank={{article_rank}}&article_type={{article_type}}&article_abroad=英国研究生留学&call1={{call1}}&call2={{call2}}&call3=2" class="{% if call3 == 2 %}active{%else%}{%endif%}">研究生</a>
+                <a href="/Abroad_article?article_rank={{article_rank}}&article_type={{article_type}}&article_abroad=英国中学留学&call1={{call1}}&call2={{call2}}&call3=3" class="{% if call3 == 3 %}active{%else%}{%endif%}">中学</a>
             </div>
         </div>
         <div class="article_list">
