--- a/views/main/index.html
+++ b/views/main/index.html
@@ -376,7 +376,7 @@
                     {% if abroad_nav.Abroad_nav_name == '申请规划表' %}
                     <li><a href="javascript:" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
                     {% else %}
-                    <li><a href="/Abroad_article?abroad_nav={{abroad_nav.Abroad_nav_name}}" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
+                    <li><a href="/Abroad_article?article_type={{abroad_nav.Abroad_nav_name}}&article_abroad=英国本科留学" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
                     {% endif %}
                 {% else %}
                 {% endif %}
@@ -438,7 +438,7 @@
                         {% endif %}
                         {% endfor %}
                     </ul>
-                    <a href="/Abroad_article?abroad={{abroad_nav.abroad.Abroad_name}}&abroad_nav={{abroad_nav.Abroad_nav_name}}" class="study_abroad_more" target="_blank">&gt;&gt;</a>
+                    <a href="/Abroad_article?article_abroad={{abroad_nav.abroad.Abroad_name}}&article_type={{abroad_nav.Abroad_nav_name}}" class="study_abroad_more" target="_blank">&gt;&gt;</a>
                 </div>
                 <div class="mid_img">
                     <p><a href="">留学评估</a></p>
@@ -517,7 +517,7 @@
                     {% if abroad_nav.Abroad_nav_name == '申请规划表' %}
                     <li><a href="javascript:" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
                     {% else %}
-                    <li><a href="/Abroad_article?abroad_nav={{abroad_nav.Abroad_nav_name}}" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
+                    <li><a href="/Abroad_article?article_type={{abroad_nav.Abroad_nav_name}}&article_abroad=英国研究生留学" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
                     {% endif %}
                 {% else %}
                 {% endif %}
@@ -579,7 +579,7 @@
                         {% endif %}
                         {% endfor %}
                     </ul>
-                    <a href="/Abroad_article?abroad={{abroad_nav.abroad.Abroad_name}}&abroad_nav={{abroad_nav.Abroad_nav_name}}" class="study_abroad_more" target="_blank">&gt;&gt;</a>
+                    <a href="/Abroad_article?article_abroad={{abroad_nav.abroad.Abroad_name}}&article_type={{abroad_nav.Abroad_nav_name}}" class="study_abroad_more" target="_blank">&gt;&gt;</a>
                 </div>
                 <div class="mid_img">
                     <p><a href="">留学评估</a></p>
@@ -659,7 +659,7 @@
                     {% if abroad_nav.Abroad_nav_name == '申请规划表' %}
                     <li><a href="javascript:" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
                     {% else %}
-                    <li><a href="/Abroad_article?abroad_nav={{abroad_nav.Abroad_nav_name}}" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
+                    <li><a href="/Abroad_article?article_type={{abroad_nav.Abroad_nav_name}}&article_abroad=英国中学留学" target="_blank">{{abroad_nav.Abroad_nav_name}}</a></li>
                     {% endif %}
                 {% else %}
                 {% endif %}
@@ -721,7 +721,7 @@
                         {% endif %}
                         {% endfor %}
                     </ul>
-                    <a href="/Abroad_article?abroad={{abroad_nav.abroad.Abroad_name}}&abroad_nav={{abroad_nav.Abroad_nav_name}}" class="study_abroad_more" target="_blank">&gt;&gt;</a>
+                    <a href="/Abroad_article?article_abroad={{abroad_nav.abroad.Abroad_name}}&article_type={{abroad_nav.Abroad_nav_name}}" class="study_abroad_more" target="_blank">&gt;&gt;</a>
                 </div>
                 <div class="mid_img">
                     <p><a href="">留学评估</a></p>
