--- a/views/main/article_list_layout.html
+++ b/views/main/article_list_layout.html
@@ -140,7 +140,7 @@
 <section class="article clearfix">
     <div class="article_bar">
         <div class="article_input_list" id="article_list">
-            <h3>文章列表筛选（共有{{articles.length}}篇）</h3>
+            <h3>文章列表筛选（共有{{length}}篇）</h3>
             <div class="article_input clearfix">
                 <p>推荐：</p>
                 <a href="/Abroad_article?article_rank=&article_type={{article_type}}&article_abroad={{article_abroad}}" class="{% if article_rank == '' %}active{%else%}{%endif%}">不限</a>
@@ -166,82 +166,16 @@
             </div>
         </div>
         <div class="article_list">
-            <ul class="article_content">
+            <ul class="article_content" id="article_content">
                 {% for article in articles %}
                 <li>
-                    <a href=""><h3>{{article.Abroad_content_name}}</h3></a>
-                    <span>阅读量 <i>{{articles.Abroad_content_hot || 0}}</i></span>
-                    <a href="" class="article_detail">【详细】</a>
+                    <a href="/Abroad_article/content?id={{article._id.toString()}}" data-id="{{article._id.toString()}}" target="_blank"><h3>{{article.Abroad_content_name}}</h3></a>
+                    <span>阅读量 <i>{{article.Abroad_content_hot || 0}}</i></span>
+                    <a href="/Abroad_article/content?id={{article._id.toString()}}" class="article_detail" data-id="{{article._id.toString()}}" target="_blank">【详细】</a>
                 </li>
                 {% endfor %}
-                <!--
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>
-                <li>
-                    <a href=""><h3>英国大量中小学开设“同情难民感受”课程</h3></a>
-                    <p>据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静据英国路透社7月20日报道，英国大量小学和初中开设同情难民感受教学课程，旨在让学生能对难民有更好的理解。在伦敦西北部一所僻静</p>
-                    <span>阅读量 <i>80</i></span>
-                    <a href="" class="article_detail">【详细】</a>
-                </li>-->
             </ul>
+            {%include 'page_article.html'%}
         </div>
     </div>
     <div class="article_sidebar">
