--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -31,6 +31,15 @@
                     </ul>
                 </li>
                 <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">透明导航<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/abroad_transparent">透明标题列表</a></li>
+                        <li><a href="/admin/abroad_transparent/add">透明标题添加</a></li>
+                        <li><a href="/admin/abroad_transparent/content">标题内容列表</a></li>
+                        <li><a href="/admin/abroad_transparent/content/add">标题内容添加</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">导航管理<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/admin/navigation">导航列表</a></li>
